--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: equivalence
 Type: Package
 Title: Provides tests and graphics for assessing tests of equivalence
-Version: 0.4.1
-Date: 2006-09-07
+Version: 0.4.3
+Date: 2007-09-07
 Author: Andrew Robinson <A.Robinson@ms.unimelb.edu.au>
 Maintainer: Andrew Robinson <A.Robinson@ms.unimelb.edu.au>
 Depends: lattice, boot, grid
@@ -10,5 +10,5 @@ Description: This package provides some statistical tests and graphics
         for assessing tests of equivalence.  Such tests have similarity
         as the alternative hypothesis instead of the null.  Sample
         datasets are included.
-License: GPL version 2.0
-Packaged: Thu Sep  7 12:10:02 2006; andrewr
+License: GPL-2
+Packaged: Thu Nov  8 11:31:37 2007; andrewr
