--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,3 @@
 import(boot, lattice)
-export(equiv.boot, equiv.boot.lm, equiv.p, equivalence.xyplot, 
+export(equiv.boot, equiv.p, equivalence.xyplot, 
        ptte.data, ptte.stat, tost, tost.data, tost.stat)
