--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: equivalence
 Type: Package
 Title: Provides tests and graphics for assessing tests of equivalence
-Version: 0.5.5
-Date: 2009-1-26
+Version: 0.5.6
+Date: 2010-01-05
 Author: Andrew Robinson <A.Robinson@ms.unimelb.edu.au>
 Maintainer: Andrew Robinson <A.Robinson@ms.unimelb.edu.au>
 Depends: lattice, boot, grid
@@ -11,4 +11,6 @@ Description: This package provides some statistical tests and graphics
         as the alternative hypothesis instead of the null.  Sample
         datasets are included.
 License: GPL-2
-Packaged: Sun Feb  8 07:19:16 2009; andrewr
+Packaged: 2010-01-05 09:12:28 UTC; andrewr
+Repository: CRAN
+Date/Publication: 2010-01-06 12:11:44
