--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: equivalence
 Type: Package
 Title: Provides tests and graphics for assessing tests of equivalence
-Version: 0.5.6
-Date: 2010-01-05
+Version: 0.5.7
+Date: 2013-10-24
 Author: Andrew Robinson <A.Robinson@ms.unimelb.edu.au>
 Maintainer: Andrew Robinson <A.Robinson@ms.unimelb.edu.au>
 Depends: lattice, boot, grid
@@ -11,6 +11,7 @@ Description: This package provides some statistical tests and graphics
         as the alternative hypothesis instead of the null.  Sample
         datasets are included.
 License: GPL-2
-Packaged: 2010-01-05 09:12:28 UTC; andrewr
+Packaged: 2013-10-24 06:28:47 UTC; andrewpr
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2010-01-06 12:11:44
+Date/Publication: 2013-10-24 09:54:12
